--- a/package.json
+++ b/package.json
@@ -5,15 +5,14 @@
   "main": "dist",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc"
+    "build": "tsc",
+    "postinstall": "tsc"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^15.12.5",
-    "express": "^4.17.1",
-    "fastify": "^3.18.1",
-    "typescript": "^4.3.4"
+    "@types/node": "^15.14.1",
+    "typescript": "^4.3.5"
   },
   "dependencies": {
     "tslib": "^2.3.0"
